<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6dp"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="16dp"
                    android:text="@string/farmar_name"
                    android:textStyle="bold"
                    android:textColor="@color/colorTex"
                    android:textSize="16dp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
            <ImageView
                android:id="@+id/image1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:src="@mipmap/ic_launcher_round" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/crop_group"
                        android:textSize="12dp"
                        android:id="@+id/crgroup"
                        android:layout_margin="10dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/crop"
                        android:id="@+id/crname"
                        android:layout_margin="10dp"
                        android:textSize="12dp"/>

                    <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                        android:id="@+id/qty"
                        android:layout_margin="10dp"
                    android:textSize="12dp"/>

                    <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Price"
                        android:id="@+id/prc"
                        android:layout_margin="10dp"
                        android:textSize="12dp"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/buy"
                        android:onClick="BUY"
                        app:srcCompat="@drawable/buy"
                        android:layout_marginLeft="50dp"/>

                </LinearLayout>
        </LinearLayout>

</LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>