<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".farmer">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bot"
        android:layout_below="@id/toolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relative">



            <!--//main-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="11dp"
                android:id="@+id/taotalll"
                android:paddingBottom="11dp"
                >


                <!--******FIRST NAME*******-->
                <LinearLayout
                    android:id="@+id/cropgroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    >
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_two"
                        android:textSize="12dp"
                        android:textColor="@color/color" />

                    <LinearLayout
                        android:layout_weight="0.6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <Spinner
                            android:id="@+id/cropgroupspinner"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:drawSelectorOnTop="true"
                            android:spinnerMode="dropdown"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="1in"
                            android:entries="@array/array_name" >

                        </Spinner>

                    </LinearLayout>

                </LinearLayout>




                <LinearLayout
                    android:id="@+id/crname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    >
                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/zip1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_three"
                        android:textSize="12dp"
                        android:textColor="@color/color" />

                    <LinearLayout
                        android:layout_weight="0.6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/cropnamespinner"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="1in"
                            android:defaultFocusHighlightEnabled="true"
                            android:drawSelectorOnTop="true"
                            android:entries="@array/array_name1"
                            android:textColor="#000000">

                        </Spinner>

                    </LinearLayout>

                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    >
                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/name1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_four"
                        android:textSize="12dp"
                        android:textColor="@color/color" />


                    <LinearLayout
                        android:layout_weight="0.6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText

                            android:id="@+id/farmername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#333333"
                            android:background="#00000000"
                            android:maxLines="1"
                            />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#dad8d8" />

                    </LinearLayout>
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    >
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_five"
                        android:textSize="12dp"
                        android:textColor="@color/color" />


                    <LinearLayout
                        android:layout_weight="0.6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText

                            android:id="@+id/price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:textColor="#333333"
                            android:background="#00000000"
                            android:maxLines="1"
                            />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#dad8d8" />

                    </LinearLayout>
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="16dp"

                    >


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/name_six"
                        android:textColor="@color/color"
                        android:textSize="12dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:orientation="vertical">

                        <EditText

                            android:id="@+id/quantity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#00000000"
                            android:inputType="number"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:textColor="#333333" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#dad8d8" />

                    </LinearLayout>

                </LinearLayout>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="16dp"

                    >



                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/address1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_seven"
                        android:textSize="12dp"
                        android:textColor="@color/color" />

                    <LinearLayout
                        android:layout_weight="0.6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="#333333"
                            android:background="#00000000"

                            />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#dad8d8" />

                    </LinearLayout>
                </LinearLayout>


                <!--******zip********-->


            </LinearLayout>



                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_marginTop="350dp"
                        android:gravity="end"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/img1"/>
                    </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp"
                >



                <Button
                    android:id="@+id/view"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name_eight"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_centerHorizontal="true"
                    android:textSize="20dp"
                    android:layout_marginTop="450dp"
                    android:background="#138808"
                    android:textColor="#ffffff"/>

            <LinearLayout
                android:layout_weight="0.6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/select"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name_nine"
                    android:layout_marginLeft="20dp"
                    android:layout_centerHorizontal="true"
                    android:textSize="20dp"
                    android:layout_marginTop="450dp"
                    android:background="#138808"
                    android:textColor="#ffffff"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dad8d8" />

            </LinearLayout>
            </LinearLayout>

        </RelativeLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#4c71f5"
        android:gravity="bottom"
        android:id="@+id/bot"
        android:weightSum="2">


        <TextView
            android:clickable="true"
            android:padding="8dp"
            android:text="@string/name_ten"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="21dp"
            android:id="@+id/galery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>

